Assets/css/glassCard.css
/* STYLES TO HIGHLIGHTED CARD */
.featured-content {
  display: flex;
  width: 100%;
  height: 600px;
  margin-bottom: 100px;
  margin-top: 50px;
  perspective: 1000px;
}

.featured-card {
  text-align: center;
  width: 60%;
  margin-left: 20%;
  transition: 1s;
  transform-style: preserve-3d;

  background-color: var(--white-bg-fill);
  border: 1px solid var(--white-bg-fill);
  backdrop-filter: blur(5px);
  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
  border-radius: 15px;
}

.featured-card:hover {
  transform: rotateY(180deg);
}

/* Begin styles to card front */
.featured-card-front {
  padding: 10%;
}

.featured-card-front h3 {
  width: 100%;
  font-size: 40px;
  margin-bottom: 10%;
}

.featured-card-front p {
  width: 100%;
  margin-bottom: 10%;
}

.featured-card-front li {
  font-size: 20px;
  flex-wrap: wrap;
  display: inline;
  list-style: none;
  margin: 0 15px;
}

/* Beg styles to card back */
.featured-card-back {
  /* flip the flipped image */
  transform: scale(-1, 1);
}

.featured-card-back h3 {
  width: 100%;
  font-size: 40px;
  margin-bottom: 5%;
}

.featured-card-back img {
  height: 400px;
}

/* BEGIN STYLES TO PROJECT CONTENT CARDS */
/* Content cards */
.content {
  display: flex;
  justify-content: space-around;
  width: 100%;
  margin-top: 150px;
  margin-bottom: 100px;
  padding: 20px;
  perspective: 1000px;
  border: 1px solid black;
}

/* This container is needed to position the front and back side */
.content-box {
  text-align: center;
  width: 30%;
  transition: 1s;
  transform-style: preserve-3d;

  background-color: var(--white-bg-fill);
  border: 1px solid var(--white-bg-fill);
  backdrop-filter: blur(5px);
  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
  border-radius: 15px;
}

.content-box:hover {
  transform: rotateY(180deg);
}

/* Begin styles to content card front */
.content-card-front {
  padding: 10%;
}

.content-card-front h3 {
  width: 100%;
  font-size: 30px;
  margin-bottom: 10%;
}

.content-card-front p {
  width: 100%;
  margin-bottom: 10%;
}

.content-card-front li {
  font-size: 20px;
  flex-wrap: wrap;
  display: inline;
  list-style: none;
}

/* Begin styles to card back */
.content-card-back {
  /* flip the flipped image */
  transform: scale(-1, 1);
}

.content-card-back h3 {
  width: 100%;
  font-size: 40px;
  margin-bottom: 5%;
}

.content-card-back img {
  height: 200px;
  margin-bottom: 20px;
}

